Fix icon alignment on context menu

--- a/ShinobuV4/src/app/components/shinobu/notes/notes.component.scss
+++ b/ShinobuV4/src/app/components/shinobu/notes/notes.component.scss
@@ -3,12 +3,6 @@
 
 .ts-notes {
   @include maximize;
-
-  i {
-    display: inline-block;
-    text-align: center;
-    width: 1em;
-  }
 }
 
 @media (max-width: $shinobuResponsive) {
